first pass at modifictaion to repdoc code to create an internal code structure

--- a/renderer/tsconfig.json
+++ b/renderer/tsconfig.json
@@ -9,6 +9,7 @@
     "newLine": "lf",
     "moduleResolution": "node",
     "jsx": "react",
+    "baseUrl": "./"
   },
-  "include": ["src/**/*.tsx","src/**/*.ts","types/*.ts"]
+  "include": ["src/**/*.tsx","src/**/*.ts","types/*.ts","lezer-javascript/dist/*.js","lezer-javascript/dist/*.ts"]
 }
